# CPPlang-Number-Guess-Game

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows.yml
docs/uml/: architecture.puml  domain.puml  sequence_game.puml
qt/: CMakeLists.txt  QtGameUI.h
src/: CMakeLists.txt  main.cpp
src/app/: GameController.cpp  GameController.h
src/domain/: Difficulty.h  GameEvent.h  GameLogic.h  GameState.h  GuessResult.h
src/infra/: CsvScoreRepository.cpp  CsvScoreRepository.h  IRandom.h  IScoreRepository.h  RandomMT.cpp  RandomMT.h
src/ui/: ConsoleUI.h  IGameUI.h
tests/: CMakeLists.txt  GameControllerTest.cpp  MockRandom.h  MockUI.h
